# cppmnist

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp  net.cpp
src/include/: evaluate.hpp  net.hpp
